HHH-15900 Add test for issue